kube-redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    service: redis
spec:
  ports:
    - port: 6379
      name: redis
    - port: 8081
      name: redisadm
  selector:
    name: redis-node
    role: master
