kube-redis/redis-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-commander
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.priority: 10
spec:
  rules:
  - host: redis.NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: redis
          servicePort: 8081
